Closed
Bug 757937
Opened 13 years ago
Closed 13 years ago
checkboxes and radio buttons are extremely small
Categories
(Firefox for Android Graveyard :: General, defect)
Tracking
(firefox14 verified, firefox15 verified, blocking-fennec1.0 +)
VERIFIED
FIXED
Firefox 16
People
(Reporter: nhirata, Assigned: dbaron)
References
()
Details
(Keywords: regression, Whiteboard: [readability])
Attachments
(2 files)
|
68.71 KB,
image/png
|
Details | |
|
3.77 KB,
patch
|
roc
:
review+
blassey
:
approval-mozilla-aurora+
blassey
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
1. Go to http://people.mozilla.com/~nhirata/html_tp/formsninput.html
2. look at the radio/checkbox buttons with medium Text Size
3. try tapping on the buttons
Expected: they should be easily selectable and viewable
Actual: the boxes and checkboxes are so small, makes it hard to tap.
Regression from bug 706889; if the checkboxes/radio buttons get bigger, then the tap target areas get bigger (bug 753250)
Comment 1•13 years ago
|
||
Discussed in triage - assigning to dbaron because it looks like something broke his fixes in bug 706889
Updated•13 years ago
|
Whiteboard: [readability]
Comment 2•13 years ago
|
||
I am seeing the issue also on HTC Desire running Android 2.2 and HTC Desire Z running Android 2.3.3 - Changing the title to cover all phones. Will try to find the regression range.
Summary: checkboxes and radio buttons are extremely small on the Galaxy S II → checkboxes and radio buttons are extremely small
Comment 3•13 years ago
|
||
good build: May 5th 2012
bad build: May 6th 2012
regression range:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=0a48e6561534&tochange=94ce5f33a9ea
| Assignee | ||
Comment 4•13 years ago
|
||
This can be tested on desktop by setting the "mozilla.widget.disable-native-theme" preference to true.
On desktop, I get an entirely different regression range from 64-bit Linux nightlies, though:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=364f0a5a1d2d&tochange=0d871550085e
This, frankly, contains a much more likely candidate for causing the regression:
http://hg.mozilla.org/mozilla-central/rev/1587faab5e5c
| Reporter | ||
Updated•13 years ago
|
Keywords: regressionwindow-wanted
| Assignee | ||
Comment 5•13 years ago
|
||
Attachment #628148 -
Flags: review?(sjohnson)
| Assignee | ||
Updated•13 years ago
|
Attachment #628148 -
Flags: review?(sjohnson) → review?(roc)
Attachment #628148 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 6•13 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/22a1bfac13d6 though I should also really add a test
Updated•13 years ago
|
Target Milestone: --- → Firefox 16
Comment 7•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 8•13 years ago
|
||
Comment on attachment 628148 [details] [diff] [review]
patch
[Approval Request Comment]
Bug caused by (feature/regressing bug #): bug 708175
User impact if declined: radio buttons and checkboxes are much smaller than text, since they're not inflated
Testing completed (on m-c, etc.): on mozilla-central
Risk to taking this patch (and alternatives if risky): relatively low risk; very slight risk that somebody was depending on the default GetType() result, but that seems very unlikely
String or UUID changes made by this patch: none
Attachment #628148 -
Flags: approval-mozilla-beta?
Attachment #628148 -
Flags: approval-mozilla-aurora?
Updated•13 years ago
|
Attachment #628148 -
Flags: approval-mozilla-beta?
Attachment #628148 -
Flags: approval-mozilla-beta+
Attachment #628148 -
Flags: approval-mozilla-aurora?
Attachment #628148 -
Flags: approval-mozilla-aurora+
Comment 9•13 years ago
|
||
Need FF14 (beta) uplift on this one.
| Assignee | ||
Comment 10•13 years ago
|
||
https://hg.mozilla.org/releases/mozilla-aurora/rev/f7541054a7b8
https://hg.mozilla.org/releases/mozilla-beta/rev/78152b1a7298
status-firefox14:
--- → fixed
status-firefox15:
--- → fixed
Backed out of Aurora due to perma-orange on Linux PGO Moth.
https://hg.mozilla.org/releases/mozilla-aurora/rev/5838fc84511b
| Assignee | ||
Comment 12•13 years ago
|
||
relanded successfully
https://hg.mozilla.org/releases/mozilla-aurora/rev/5f08078c0af9
Comment 13•13 years ago
|
||
Verified fixed using http://people.mozilla.com/~nhirata/html_tp/formsninput.html on:
Nightly 16.0a1 (2012-06-12)
Aurora 15.0a2 (2012-06-12)
Samsung Galaxy SII (2.3.4)
Still needs to be verified on next beta build.
Comment 14•13 years ago
|
||
Verified fixed on:
Aurora 15.0a2 2012-07-08/Nightly 16.0a1 2012-07-08/ Firefox Mobile 14.0b11
HTC Desire/Samsung Google Nexus
Android 2.2.2/ Android 4.0.2
Status: RESOLVED → VERIFIED
Updated•4 years ago
|
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•