Restore application of font size inflation to radios and checkboxes.  (Bug 757937)  r=roc  approval-mozilla-beta=blassey

--HG--
extra : transplant_source : %F7T%10T%A7%B8j%0FdN%D8%1F%40%D8%F8%3D%BE%0F%F5%5B