layout/forms/nsFormControlFrame.cpp
@@ -57,6 +57,12 @@ nsFormControlFrame::~nsFormControlFrame()
 {
 }
 
+nsIAtom*
+nsFormControlFrame::GetType() const
+{
+  return nsGkAtoms::formControlFrame; 
+}
+
 void
 nsFormControlFrame::DestroyFrom(nsIFrame* aDestructRoot)
 {
